--- a/app/src/main/res/drawable-v24/ic_down_arrow.xml
+++ b/app/src/main/res/drawable-v24/ic_down_arrow.xml
@@ -3,8 +3,8 @@
     android:height="24dp"
     android:viewportWidth="24"
     android:viewportHeight="24"
-    android:tint="@android:color/black">
+    android:tint="#C0B9B9">
   <path
-      android:fillColor="#000000"
+      android:fillColor="#C0B9B9"
       android:pathData="M7.41,8.59L12,13.17l4.59,-4.58L18,10l-6,6 -6,-6 1.41,-1.41z"/>
 </vector>
