--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -16,6 +16,7 @@
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
+            app:navigationIcon="@drawable/arrow_back"
             app:popupTheme="@style/Theme.RoomSeller.PopupOverlay" />
 
     </com.google.android.material.appbar.AppBarLayout>
