--- a/app/src/main/res/drawable/side_nav_bar.xml
+++ b/app/src/main/res/drawable/side_nav_bar.xml
@@ -2,7 +2,7 @@
     android:shape="rectangle">
     <gradient
         android:angle="135"
-        android:centerColor="@color/primary"
+        android:centerColor="@color/dark_blue"
         android:endColor="#00695C"
         android:startColor="#4DB6AC"
         android:type="linear" />
