--- a/app/src/main/res/layout/fragment_room_type.xml
+++ b/app/src/main/res/layout/fragment_room_type.xml
@@ -1,129 +1,88 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+
+<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    app:strokeColor="@color/stroke_color">
 
-    <com.google.android.material.card.MaterialCardView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:strokeColor="@color/stroke_color"
-        app:strokeWidth="1dp"
-        android:padding="16dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:paddingTop="8dp">
 
+        <TextView
+            android:id="@+id/tv_room_info_section"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:gravity="center_horizontal"
+            android:text="Room Information"
+            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+            android:textColor="?attr/colorAccent" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/roomTypeRowInfo"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:padding="16dp">
+            android:layout_height="wrap_content"
+            android:paddingStart="16dp"
+            android:paddingTop="8dp"
+            android:paddingEnd="16dp"
+            android:paddingBottom="16dp">
+
 
             <TextView
-                android:id="@+id/tv_room_type_label"
+                android:id="@+id/tv_room_type"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Standard Sgl/Dbl"
-                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-                android:textColor="@color/primary"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="8dp"
+                android:text="Deluxe Room"
+                app:layout_constraintStart_toEndOf="@+id/root_type_drop_down"
                 app:layout_constraintTop_toTopOf="parent" />
 
-            <TextView
-                android:id="@+id/tv_max_occupancy_label"
+            <ImageView
+                android:id="@+id/root_type_drop_down"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Max Occupancy"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tv_room_type_label" />
-
-            <TextView
-                android:id="@+id/tv_max_occupancy"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="2"
-                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-                app:layout_constraintStart_toStartOf="@+id/tv_max_occupancy_label"
-                app:layout_constraintTop_toBottomOf="@+id/tv_max_occupancy_label" />
-
-            <TextView
-                android:id="@+id/tv_rate_plan_label"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Rate Plan"
-                app:layout_constraintEnd_toEndOf="@+id/tv_rate_plan"
-                app:layout_constraintTop_toTopOf="@+id/tv_max_occupancy_label" />
+                app:layout_constraintTop_toTopOf="@+id/tv_room_type"
+                app:srcCompat="@drawable/ic_down_arrow" />
 
             <TextView
                 android:id="@+id/tv_rate_plan"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Standard Rate"
-                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                app:layout_constraintEnd_toEndOf="@+id/tv_room_type_sub_total"
+                app:layout_constraintTop_toBottomOf="@+id/tv_room_type_sub_total" />
+
+            <TextView
+                android:id="@+id/tv_room_type_sub_total"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="MMK 1050000.0"
+                android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/tv_max_occupancy" />
-
-            <TextView
-                android:id="@+id/tv_one_extra_bed_rate_label"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:text="One Extra Bed Rate"
-                app:layout_constraintStart_toStartOf="@+id/tv_max_occupancy_label"
-                app:layout_constraintTop_toBottomOf="@+id/tv_max_occupancy" />
-
-            <TextView
-                android:id="@+id/tv_extra_bed_rate"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="N/A"
-                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-                app:layout_constraintStart_toStartOf="@+id/tv_max_occupancy_label"
-                app:layout_constraintTop_toBottomOf="@+id/tv_one_extra_bed_rate_label" />
-
-            <TextView
-                android:id="@+id/tv_sub_total_label"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Sub Total"
-                app:layout_constraintEnd_toEndOf="@+id/tv_rate_plan"
-                app:layout_constraintTop_toTopOf="@+id/tv_one_extra_bed_rate_label" />
-
-
-            <TextView
-                android:id="@+id/tv_sub_total"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="MMK 105000.0"
-                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-                app:layout_constraintEnd_toStartOf="@+id/imageView"
-                app:layout_constraintTop_toBottomOf="@+id/tv_sub_total_label" />
-
-            <ImageView
-                android:id="@+id/imageView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:layout_constraintEnd_toEndOf="@+id/tv_sub_total_label"
-                app:layout_constraintTop_toTopOf="@+id/tv_sub_total"
-                app:srcCompat="@drawable/ic_down_arrow" />
+                app:layout_constraintTop_toTopOf="@+id/tv_room_type" />
 
             <TableLayout
                 android:id="@+id/tableRate"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginTop="24dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:visibility="gone"
                 android:background="@android:color/white"
-                app:layout_constraintLeft_toLeftOf="@+id/tv_extra_bed_rate"
-                app:layout_constraintRight_toRightOf="@+id/tv_sub_total_label"
-                app:layout_constraintStart_toStartOf="@+id/tv_extra_bed_rate"
-                app:layout_constraintTop_toBottomOf="@+id/tv_extra_bed_rate">
+                app:layout_constraintLeft_toLeftOf="@+id/root_type_drop_down"
+                app:layout_constraintRight_toRightOf="@+id/tv_room_type_sub_total"
+                app:layout_constraintStart_toStartOf="@+id/root_type_drop_down"
+                app:layout_constraintTop_toBottomOf="@+id/tv_rate_plan">
 
                 <TableRow
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:background="@color/purple_200">
+                    android:background="?attr/colorPrimary">
 
                     <!--  Table Heading  -->
 
@@ -132,8 +91,9 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="2"
                         android:gravity="center_horizontal"
-                        android:padding="10sp"
+                        android:paddingStart="16sp"
                         android:text="Date"
+                        android:textColor="@color/white"
                         android:textSize="14sp"
                         android:textStyle="bold" />
 
@@ -141,9 +101,10 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="4"
-                        android:gravity="center_horizontal"
+                        android:gravity="end"
                         android:padding="10sp"
-                        android:text="Rate per night (Extra bed rate included if any)"
+                        android:text="Rate per night"
+                        android:textColor="@color/white"
                         android:textSize="14sp"
                         android:textStyle="bold" />
                     <!--            -->
@@ -160,7 +121,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="2"
                         android:gravity="center_horizontal"
-                        android:padding="10sp"
+                        android:paddingStart="16sp"
                         android:text="Jul 21, 2020 "
                         android:textSize="14sp" />
 
@@ -168,7 +129,7 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="4"
-                        android:gravity="center_horizontal"
+                        android:gravity="end"
                         android:padding="10sp"
                         android:text="35000.0"
                         android:textSize="14sp" />
@@ -183,7 +144,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="2"
                         android:gravity="center_horizontal"
-                        android:padding="10sp"
+                        android:paddingStart="16sp"
                         android:text="Jul 22, 2020 "
                         android:textSize="14sp" />
 
@@ -191,7 +152,7 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="4"
-                        android:gravity="center_horizontal"
+                        android:gravity="end"
                         android:padding="10sp"
                         android:text="35000.0"
                         android:textSize="14sp" />
@@ -208,7 +169,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="2"
                         android:gravity="center_horizontal"
-                        android:padding="10sp"
+                        android:paddingStart="16sp"
                         android:text="Jul 23, 2020 "
                         android:textSize="14sp" />
 
@@ -216,7 +177,7 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="4"
-                        android:gravity="center_horizontal"
+                        android:gravity="end"
                         android:padding="10sp"
                         android:text="35000.0"
                         android:textSize="14sp" />
@@ -225,8 +186,123 @@
                 <!--  Table Data       -->
             </TableLayout>
 
+            <TextView
+                android:id="@+id/tv_max_occupancy"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:text="2 max occupancy"
+                app:layout_constraintStart_toEndOf="@+id/imageView11"
+                app:layout_constraintTop_toBottomOf="@+id/tv_room_type" />
+
+            <ImageView
+                android:id="@+id/imageView11"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                app:layout_constraintStart_toStartOf="@+id/tv_room_type"
+                app:layout_constraintTop_toBottomOf="@+id/tv_room_type"
+                app:srcCompat="@drawable/person" />
+
         </androidx.constraintlayout.widget.ConstraintLayout>
 
-    </com.google.android.material.card.MaterialCardView>
+        <View
+            android:id="@+id/divider2"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="?android:attr/listDivider" />
 
-</LinearLayout>
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/roomTypeRow2"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:paddingStart="16dp"
+            android:paddingTop="8dp"
+            android:paddingEnd="16dp"
+            android:paddingBottom="16dp">
+
+
+            <ImageView
+                android:id="@+id/imageView7"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/textView73"
+                app:srcCompat="@drawable/ic_down_arrow" />
+
+            <TextView
+                android:id="@+id/textView73"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:text="Standard Sgl/Dbl"
+                app:layout_constraintStart_toEndOf="@+id/imageView7"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/textView74"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Standard Rate"
+                app:layout_constraintEnd_toEndOf="@+id/textView75"
+                app:layout_constraintTop_toBottomOf="@+id/textView75" />
+
+            <!--            <TextView-->
+            <!--                android:id="@+id/textView76"-->
+            <!--                android:layout_width="wrap_content"-->
+            <!--                android:layout_height="wrap_content"-->
+            <!--                android:text="1 extra bed"-->
+            <!--                app:layout_constraintStart_toStartOf="@+id/textView73"-->
+            <!--                app:layout_constraintTop_toBottomOf="@+id/textView73" />-->
+
+            <TextView
+                android:id="@+id/textView75"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="MMK 2000000.0"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/textView73" />
+
+
+            <TextView
+                android:id="@+id/textView79"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:text="2 max occupancy"
+                app:layout_constraintStart_toEndOf="@+id/imageView10"
+                app:layout_constraintTop_toBottomOf="@+id/textView73" />
+
+            <TextView
+                android:id="@+id/tv_extra_bed"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:text="1 extra bed"
+                app:layout_constraintStart_toEndOf="@+id/imageView12"
+                app:layout_constraintTop_toBottomOf="@+id/textView79" />
+
+            <ImageView
+                android:id="@+id/imageView12"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                app:layout_constraintStart_toStartOf="@+id/textView73"
+                app:layout_constraintTop_toBottomOf="@+id/textView79"
+                app:srcCompat="@drawable/single_bed" />
+
+            <ImageView
+                android:id="@+id/imageView10"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                app:layout_constraintStart_toStartOf="@+id/textView73"
+                app:layout_constraintTop_toBottomOf="@+id/textView73"
+                app:srcCompat="@drawable/person" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </LinearLayout>
+
+
+
+
+
+</com.google.android.material.card.MaterialCardView>
