--- a/app/src/main/res/layout/item_booking_info.xml
+++ b/app/src/main/res/layout/item_booking_info.xml
@@ -1,99 +1,136 @@
 <?xml version="1.0" encoding="utf-8"?>
 
+<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_margin="2dp"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:id="@+id/bookingRowLayout2"
+    app:strokeColor="@color/stroke_color"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <com.google.android.material.card.MaterialCardView
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/bookingRowLayout2"
-        android:layout_margin="2dp"
-        android:foreground="?android:attr/selectableItemBackground"
-        style="?attr/shapeAppearanceMediumComponent">
+        android:padding="16dp"
+        app:strokeColor="@color/stroke_color">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
+
+        <TextView
+            android:id="@+id/tv_row_guest_name_num_guest_num_rooms"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:padding="16dp">
+            android:text="Dominic Rath | 3 guests | 2 rooms"
+            android:textAppearance="@style/TextAppearance.AppCompat.Small"
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-            <TextView
-                android:id="@+id/tv_row_guest_name_num_guest"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Su Su Aye | 2 guests"
-                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-                android:textStyle="bold"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+        <TextView
+            android:id="@+id/tv_row_booking_ref_label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:text="Booking Reference"
+            android:textColor="@color/textMuted"
+            android:textSize="12sp"
+            app:layout_constraintStart_toStartOf="@+id/tv_row_guest_name_num_guest_num_rooms"
+            app:layout_constraintTop_toBottomOf="@+id/tv_row_guest_name_num_guest_num_rooms" />
 
-            <TextView
-                android:id="@+id/tv_row_booking_ref_label"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:text="Booking Reference:"
-                app:layout_constraintStart_toStartOf="@+id/tv_row_guest_name_num_guest"
-                app:layout_constraintTop_toBottomOf="@+id/tv_row_guest_name_num_guest" />
+        <TextView
+            android:id="@+id/tv_row_booking_ref"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="2022-3456"
+            android:textAppearance="@style/TextAppearance.AppCompat.Small"
+            app:layout_constraintStart_toStartOf="@+id/tv_row_guest_name_num_guest_num_rooms"
+            app:layout_constraintTop_toBottomOf="@+id/tv_row_booking_ref_label" />
 
-            <TextView
-                android:id="@+id/tv_row_booking_ref"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:text="2022-3456"
-                android:textColor="@color/design_default_color_secondary"
-                app:layout_constraintStart_toEndOf="@+id/tv_row_booking_ref_label"
-                app:layout_constraintTop_toTopOf="@+id/tv_row_booking_ref_label" />
+        <TextView
+            android:id="@+id/tv_row_booked_on_label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/textMuted"
+            android:text="Booked On"
+            android:textSize="12sp"
+            app:layout_constraintEnd_toEndOf="@+id/tv_row_booked_on"
+            app:layout_constraintTop_toTopOf="@+id/tv_row_booking_ref_label" />
 
-            <TextView
-                android:id="@+id/tv_row_checkin_label"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:text="Check In"
-                android:textSize="12sp"
-                app:layout_constraintStart_toStartOf="@+id/tv_row_booking_ref_label"
-                app:layout_constraintTop_toBottomOf="@+id/tv_row_booking_ref_label" />
+        <TextView
+            android:id="@+id/tv_row_booked_on"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Feb 24 2022, 01:40pm"
+            android:textAppearance="@style/TextAppearance.AppCompat.Small"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tv_row_booked_on_label" />
 
-            <TextView
-                android:id="@+id/tv_checkIn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Dec 19, 2021"
-                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-                app:layout_constraintStart_toStartOf="@+id/tv_row_guest_name_num_guest"
-                app:layout_constraintTop_toBottomOf="@+id/tv_row_checkin_label" />
+        <TextView
+            android:id="@+id/tv_row_checkin_label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:textColor="@color/textMuted"
+            android:text="Check In"
+            android:textSize="12sp"
+            app:layout_constraintStart_toStartOf="@+id/tv_row_booking_ref"
+            app:layout_constraintTop_toBottomOf="@+id/tv_row_booking_ref" />
 
-            <TextView
-                android:id="@+id/textView9"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Check Out"
-                android:textSize="12sp"
-                app:layout_constraintStart_toStartOf="@+id/tv_row_checkout"
-                app:layout_constraintTop_toTopOf="@+id/tv_row_checkin_label" />
+        <TextView
+            android:id="@+id/tv_checkIn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="2022-2-25"
+            android:textAppearance="@style/TextAppearance.AppCompat.Small"
+            app:layout_constraintStart_toStartOf="@+id/tv_row_checkin_label"
+            app:layout_constraintTop_toBottomOf="@+id/tv_row_checkin_label" />
 
-            <TextView
-                android:id="@+id/tv_row_checkout"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="32dp"
-                android:text="Dec 19, 2021"
-                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView9" />
+        <TextView
+            android:id="@+id/tv_row_checkout_label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:text="Check Out"
+            android:textColor="@color/textMuted"
+            android:textSize="12sp"
+            app:layout_constraintEnd_toEndOf="@+id/tv_row_checkout"
+            app:layout_constraintTop_toBottomOf="@+id/tv_row_booked_on" />
 
-            <TextView
-                android:id="@+id/tv_nights_and_rooms"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="2 nights - 2 rooms"
-                app:layout_constraintStart_toStartOf="@+id/tv_row_checkout"
-                app:layout_constraintTop_toTopOf="@+id/tv_row_booking_ref_label" />
+        <TextView
+            android:id="@+id/tv_row_checkout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="2022-02-27"
+            android:textAppearance="@style/TextAppearance.AppCompat.Small"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tv_row_checkout_label" />
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
+        <View
+            android:id="@+id/view6"
+            android:layout_width="0dp"
+            android:layout_height="1dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
+            android:background="@color/textMuted"
+            app:layout_constraintBottom_toBottomOf="@+id/tv_checkIn"
+            app:layout_constraintEnd_toStartOf="@+id/tv_row_checkout"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toEndOf="@+id/tv_checkIn"
+            app:layout_constraintTop_toTopOf="@+id/tv_checkIn" />
+
+        <TextView
+            android:id="@+id/tv_row_nights"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
+            android:text="2 nights"
+            app:layout_constraintBottom_toTopOf="@+id/view6"
+            app:layout_constraintEnd_toStartOf="@+id/tv_row_checkout"
+            app:layout_constraintStart_toEndOf="@+id/tv_checkIn" />
 
 
-    </com.google.android.material.card.MaterialCardView>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+</com.google.android.material.card.MaterialCardView>
 
