--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,7 +14,11 @@
     <color name="stroke_color">#eaecef</color>
 
 
-    <color name="primary">#FF6200EE</color>
-    <color name="textMuted">#d5d8da</color>
+    <color name="dark_blue">#27293d</color>
+    <color name="light_dark_blue">#303c54</color>
+
+    <color name="blue">#234c9e</color>
+    <color name="textMuted">#797979</color>
+    <color name="muted">#C0B9B9</color>
 
 </resources>
