--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -13,7 +13,7 @@
 
     <fragment
         android:id="@+id/nav_booking_list"
-        android:name="com.innoveller.roomseller.ui.booking.BookingFragment"
+        android:name="com.innoveller.roomseller.ui.booking.BookingListFragment"
         android:label="@string/menu_booking"
         tools:layout="@layout/fragment_booking_list" />
 
