--- a/app/src/main/res/layout/fragment_booking_list.xml
+++ b/app/src/main/res/layout/fragment_booking_list.xml
@@ -45,9 +45,13 @@
 
     </LinearLayout>
 
-<!--    <SearchView-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="match_parent" />-->
+    <SearchView
+        android:id="@+id/tv_search_filter"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:queryHint="Booking ref or guest name"
+        android:iconifiedByDefault="false"
+        android:paddingBottom="10dp"/>
 
     <ProgressBar
         android:id="@+id/pb_loading"
